# cutecpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  notes.md  vcpkg.json
cmake/: cutecppConfig.cmake.in
include/: log.hpp
lib/: CMakeLists.txt
lib/include/cutecpp/: json.hpp  log.hpp  log_level.hpp  socket.hpp
lib/include_private/: socket.hpp  utils.hpp
lib/src/: log.cpp  socket.cpp
ports/cutecpp/: portfile.cmake  vcpkg.json
tests/: CMakeLists.txt  test_logger.cpp
